kmk003 fix width column tab 6

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a2/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a2/index.xhtml
@@ -24,7 +24,7 @@
 		</com:ko>
 		
 		<com:ko tag="if" bind="isSimpleMode() &amp;&amp; !isFlowMode()">
-			<div tabindex="-1" class="accordion setting_detail_tab2">
+			<div tabindex="46" class="accordion setting_detail_tab2">
 				<div id="fixtable-tab2-one-day-simple-mode" class="tab-2-table-width" data-bind="ntsFixTableCustom: {
 						isEnableAllControl: isEnableTimeRangeOneDaySimpleMode,
 						option: fixTableOptionOneDaySimpleMode}"></div>
@@ -39,7 +39,7 @@
 					<label>#{i18n.getText('KMK003_60')}</label>
 				</h3>
 				<div class ="accordion-content">
-					<div id="fixtable-tab2-morning-day" class="tab-2-table-width" data-bind="ntsFixTableCustom: {
+					<div tabindex ="47" id="fixtable-tab2-morning-day" class="tab-2-table-width" data-bind="ntsFixTableCustom: {
 						option: fixTableOptionMorning}"></div>
 				</div>
 			</div>
@@ -49,7 +49,7 @@
 					<label>#{i18n.getText('KMK003_61')}</label>
 				</h3>
 				<div class ="accordion-content">
-					<div id="fixtable-tab2-afternoon" class="tab-2-table-width"
+					<div tabindex ="48" id="fixtable-tab2-afternoon" class="tab-2-table-width"
 						data-bind="ntsFixTableCustom: {option: fixTableOptionAfternoon}"></div>
 				</div>
 			</div>
