--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
@@ -48,6 +48,7 @@
 									options: cbbItemList,
 									optionsValue: 'code',
 									visibleItemsCount: 5,
+									name: '#[KAL003_9]',
 									value: selectedCategory,
 									optionsText: 'name',
 									editable: false,
@@ -59,7 +60,8 @@
 							</div>
 							<table id="single-list" tabindex="6"
 								data-bind="ntsGridList: {								
- 									height: 350, 
+ 									height: 350,
+ 									name: '#[KAL003_10]', 
  									dataSource: listAlarmCheckCondition, 
  									primaryKey: 'displayCode', 
  									columns: [
@@ -75,9 +77,9 @@
 						<div data-bind="with: selectedAlarmCheckCondition">
 							<div class="valign-center control-group">
 								<label class="flabel">#{i18n.getText('KAL003_11')}</label> 
-								<input tabindex="7" id="A3_2" data-bind="ntsTextEditor: {value: code, required: true, constraint: 'AlarmCheckConditionCode', enable: $parent.screenMode() == 0, option: {width: '80px'}}" /> 
+								<input tabindex="7" id="A3_2" data-bind="ntsTextEditor: {name: '#[KAL003_11]', value: code, required: true, constraint: 'AlarmCheckConditionCode', enable: $parent.screenMode() == 0, option: {width: '80px'}}" /> 
 								<label style="padding-left: 50px">#{i18n.getText('KAL003_12')}</label>
-								<input tabindex="8" id="A3_4" data-bind="ntsTextEditor: {value: name, required: true, constraint: 'AlarmCheckConditionName'}" />
+								<input tabindex="8" id="A3_4" data-bind="ntsTextEditor: {name: '#[KAL003_12]', value: name, required: true, constraint: 'AlarmCheckConditionName'}" />
 							</div>
 							<div class="valign-center control-group">
 								<label class="flabel">#{i18n.getText('KAL003_9')}</label> 
@@ -94,7 +96,7 @@
 							</div>
 							<div class="valign-center control-group">
 								<label class="flabel">#{i18n.getText('KAL003_13')}</label> 
-								<input data-bind="ntsTextEditor: {value: displayAvailableRoles, readonly: true}" />
+								<input data-bind="ntsTextEditor: {name: '#[KAL003_13]', value: displayAvailableRoles, readonly: true}" />
 								<button tabindex="10">#{i18n.getText('KAL003_14')}</button>
 							</div>
 						</div>
