--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -65,14 +65,14 @@
 			                                 value: alarmCode,
 			                                 required: true,
 			                                 enable: createMode,
-			                                 immediate: true }, hasFocus: createMode()"/>
+			                                 immediate: true }, hasFocus: currentCode() ==''"/>
 										<input tabindex="7" id="alarmName"
 			                                 data-bind="ntsTextEditor: {
 			                                 name: '#[KAL004_11]',
 			                                 value: alarmName,
 			                                 constraint: 'AlarmPatternName',
 			                                 required: true,
-			                                 immediate: true}, hasFocus: !createMode()"/>		                                 
+			                                 immediate: true}, hasFocus: currentCode()!=''"/>		                                 
 									</td>
 								</tr>
 						</table>
