--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -41,7 +41,7 @@
 					dateFormat: 'YYYY/MM/DD',
 					value: periodEnd,
 					required: true }"></div> 
-				<button tabindex="5" id="zcxvzxcv" class="proceed" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2_12')}</button>
+				<button tabindex="5" id="zcxvzxcv" class="proceed" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
 			</div>
 		<div tabindex="2" id="tab-panel" class="cf ccg-tabpanel pull-left"
 			data-bind="if: isQuickSearchTab||isAdvancedSearchTab, ntsTabPanel: { dataSource: tabs, active: selectedTab}">
@@ -87,11 +87,71 @@
 								<div tabindex="-1" class="accordion" id="EmploymentList"
 									data-bind="ntsAccordion: {enable: true}">
 									<h3>
-										<label>#{i18n.getText('CCG001_5')}</label>
+										<label>#{i18n.getText('CCG001_42')}</label>
 									</h3>
 									<div class="contentkcp">
-										<div id="employmentList" tabindex="7" style="width: 352px"></div>
+										<div style="padding-bottom: 20px;">
+											<label>#{i18n.getText('CCG001_43')}</label>
+											<div class="pull-right" id="switch-buttons" data-bind="ntsSwitchButton: {
+												options: incumbent,
+												optionsValue: 'code',
+												optionsText: 'name',
+												value: selectedIncumbent,
+												enable: true }">
+											</div>
+										</div>
+										<div style="padding-bottom: 20px;">
+											<label>#{i18n.getText('CCG001_47')}</label>
+											<div class="pull-right" id="switch-buttons" data-bind="ntsSwitchButton: {
+												options: closure,
+												optionsValue: 'code',
+												optionsText: 'name',
+												value: selectedClosureG,
+												enable: true }">
+											</div>
+										</div>
+										<div style="padding-bottom: 20px;">
+											<label>#{i18n.getText('CCG001_45')}</label>
+											<div class="pull-right" id="switch-buttons" data-bind="ntsSwitchButton: {
+												options: leaveOfAbsence,
+												optionsValue: 'code',
+												optionsText: 'name',
+												value: selectedLeave,
+												enable: true }">
+											</div>
+										</div>
+										<div style="padding-bottom: 20px;">
+											<label>#{i18n.getText('CCG001_49')}</label>
+											<div class="pull-right" id="switch-buttons" data-bind="ntsSwitchButton: {
+												options: retirement,
+												optionsValue: 'code',
+												optionsText: 'name',
+												value: selectedRetirement,
+												enable: true }">
+											</div>
+										</div>
+										<div class="pull-right" style="padding-top: 10px;">
+											<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {
+												name: '#[CCG001_93]',
+												dateFormat: 'YYYY/MM/DD',
+												value: periodStart,
+												required: true }">
+											</div> 
+											<span> ~ </span>
+											<div id="inp_baseDate" tabindex="2" data-bind="ntsDatePicker: {
+												name: '#[CCG001_94]',
+												dateFormat: 'YYYY/MM/DD',
+												value: periodEnd,
+												required: true }">
+											</div> 
+										</div>
 									</div>
+								</div>
+								<div tabindex="-1" class="accordion" id="EmploymentList"
+									data-bind="ntsAccordion: {enable: true}">
+									<h3>
+										<label>#{i18n.getText('CCG001_5')}</label>
+									</h3>
 								</div>
 								<div tabindex="-1" class="accordion" id="ClassificationList"
 									data-bind="ntsAccordion: {enable: true}">
@@ -120,6 +180,15 @@
 										<div tabindex="10" id="workplaceList"></div>
 										<button tabindex="11" id="btnDetailWorkplace"
 											data-bind="click: detailWorkplace">#{i18n.getText('CCG001_9')}</button>
+									</div>
+								</div>
+								<div tabindex="-1" class="accordion" id="EmploymentList"
+									data-bind="ntsAccordion: {enable: true}">
+									<h3>
+										<label>#{i18n.getText('CCG001_58')}</label>
+									</h3>
+									<div class="contentkcp">
+										<div id="employmentList" tabindex="7" style="width: 352px"></div>
 									</div>
 								</div>
 							</div>
