--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -97,7 +97,8 @@
 									multiple: true,
 						            searchCriterion:['checkConditonCode','checkConditionName'],
 						            enableRowNumbering: false ,
-						            showSort:{ showLeft : false, showRight: false}									
+						            showSort:{ showLeft : false, showRight: false}	,
+						            afterMoveLeft:  afterMoveLeft.bind($data)
 								  }"></div>
 							</div>
 							<div class="tab-content-2 tab-content-fixsize" data-bind="with: periodSetting" >
