fix bug focus ver6.4

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -117,7 +117,7 @@
 								<com:ko tag="with" bind="workTimeSettingLoader">
 								<div class="control-group">
 									<div data-bind="ntsFormLabel: {}">#{i18n.getText('KMK003_7')}</div>
-									<div tabindex="5" id="combo-box"
+									<div tabindex="5" id="search-daily-atr"
 										data-bind="ntsComboBox: {
 										name: '#[KMK003_7]',
 										options: workTimeAtrEnums,
