--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/014/a/cas014.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/014/a/cas014.a.style.css
@@ -20,10 +20,13 @@
 .caret-right.outline:after {
     margin-left: 0.3em;    
     border-left: 1.5em solid;
-    border-top: 7em solid transparent;
-    border-bottom: 7em solid transparent;
+    border-top: 6em solid transparent;
+    border-bottom: 6em solid transparent;
 }
 
 .jobtitle-table > tbody > tr > td {
 	height: 52px;
 }
+
+.contents-area-b .bottom-row .label-code{display:inline-block;padding-left:5px; width:110px;}
+.contents-area-b .bottom-row .label-name{display:inline-block;padding-left:10px; width:20px; white-space: nowrap;}
