--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/a1/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/a1/index.xhtml
@@ -48,6 +48,7 @@
 												optionsText: 'name',
 												editable: false,
 												enable: true,
+												dropDownAttachedToBody: true,
 												columns: [
 													{ prop: 'name', length: 10 },
 												]}"></div>
@@ -61,6 +62,7 @@
 												optionsText: 'name',
 												editable: false,
 												enable: true,
+												dropDownAttachedToBody: true,
 												columns: [
 													{ prop: 'name', length: 10 },
 												]}"></div>
