--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/b/index.xhtml
@@ -25,7 +25,7 @@
 		<div id="part-2" style="width: 590px;">
 			<div id="sample-component"></div>
 		</div>
-		<div id="part-3" style="width: 65px;">
+		<div id="part-3">
 			<div>
 				<div id="B3_12" data-bind="ntsFormLabel: {}">#{i18n.getText('CCG018_38')}</div>
 				<span id="B3_13" data-bind="text: employeeCode"></span> <span
