upDate ProgramsManager KAL004Update KAL004 tab2

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/index.xhtml
@@ -15,6 +15,7 @@
             	nts.uk.ctx.at.function.dom.alarm.extractionrange.PreviousClassification
 				nts.uk.ctx.at.function.dom.alarm.extractionrange.daily.SpecifiedMonth
 				nts.uk.ctx.at.function.dom.alarm.AlarmCategory
+				nts.uk.ctx.at.function.dom.alarm.extractionrange.periodunit.SegmentationOfCycle
 			</com:EnumScript>
             <com:scriptfile set="IGNITE" />
             <com:scriptfile path="../share/model.js" />
