--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/f/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/f/index.xhtml
@@ -24,7 +24,7 @@
 		<ui:define name="content">
 
 			<div id="contents-area">
-				<label>Chưa có Text</label>
+				<label data-bind="text:textlabel"></label>
 				<hr></hr>
 				<div
 					data-bind="ntsRadioBoxGroup: {
